syntax = "proto3";

package ddb;

option go_package = 'ddb';

service Ddb {
  rpc Get (GetRequest) returns (GetResponse) {}
  rpc Set (SetRequest) returns (SetResponse) {}
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  string key = 1;
  bytes value = 2;
}

message SetRequest {
  string key = 1;
  bytes value = 2;
}

message SetResponse {
}
