syntax = "proto3";

package ddb.internal;

message LogRecord {
  int64 sequence = 1;
  Mutation mutation = 2;
}

message Mutation {
  enum Type {
    UNSPECIFIED = 0;
    PUT = 1;
    DELETE = 2;
  }

  // The key associated with this mutation.
  string key = 1;

  // The type of this mutation.
  Type type = 2;

  // Timestamp of this mutation.
  int64 timestamp = 3;

  // For mutations that update, this is the value.
  bytes value = 4;
}

message DescriptorProto {
  repeated SstMeta sst_meta = 1;
}

message SstMeta {
  // Filename is the name of the SST file, relative to the configured SST directory.
  string filename = 1;

  // The sequence number (inclusive) of mutations that have been applied.
  int64 applied_until = 2;
}